Добавлены запросы и тестирование 2